--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 19 14:58:02 EDT 2021
-sdk.dir=/Users/hannahschrager/Library/Android/sdk
+#Thu Sep 22 13:07:07 CDT 2022
+sdk.dir=/Users/douglascraigschmidt/Library/Android/sdk
