--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,9 +1,8 @@
 plugins {
     id 'org.springframework.boot' version '2.4.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id "io.franzbecker.gradle-lombok" version "4.0.0"
+    id "io.franzbecker.gradle-lombok" version "5.0.0"
     id 'java'
-    id 'maven'
 }
 
 configurations {
@@ -32,12 +31,12 @@ dependencies {
     implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.2.2.RELEASE'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'com.github.ben-manes.caffeine:caffeine'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.8'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.4'
-    runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.4'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+    runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
     runtimeOnly 'com.h2database:h2'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
